--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,11 @@ header {
 nav {
     background-color: rgb(105, 195, 255);
     grid-row: 1 / -1;
+    color: white;
+}
+
+nav img {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(76deg) brightness(104%) contrast(102%);
 }
 
 .content {
