--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
+@font-face {
+    font-family: 'rubikblack';
+    src: url('rubik-black-webfont.woff2') format('woff2'),
+         url('rubik-black-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
+    font-family: "roboto" 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: grid;
     width: 100vw;
     height: 100vh;
