--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    font-family: "roboto" 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "rubikblack", 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: grid;
     width: 100vw;
     height: 100vh;
