Fix layout in nav

--- a/styles.css
+++ b/styles.css
@@ -26,24 +26,40 @@ header {
 }
 
 nav {
+    display: grid;
     background-color: rgb(105, 195, 255);
+    grid-template-rows: 1fr 6fr 3fr;
     grid-row: 1 / -1;
     color: white;
 }
 
+h1, h2 {
+    align-self: center;
+}
+
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 nav div {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    align-items: center;
     gap: 15px;
+    align-items: start;
 }
 
 .dash {
     margin: 20px;
+}
+
+.options {
+    grid-template-columns: 1fr;
+}
+
+.options div {
+    margin: 0 40px;
+    grid-template-columns: 1fr 8fr;
+    align-items: center;
 }
 
 nav img {
