--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     display: grid;
     width: 100vw;
     height: 100vh;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
 }
 
@@ -26,9 +26,7 @@ header {
 }
 
 nav {
-    display: grid;
     background-color: rgb(105, 195, 255);
-    grid-template-rows: 1fr 6fr 3fr;
     grid-row: 1 / -1;
     color: white;
 }
@@ -41,11 +39,8 @@ h1 {
     font-size: 2rem;
 }
 
-nav div {
-    display: grid;
-    grid-template-columns: 1fr 5fr;
-    gap: 15px;
-    align-items: start;
+h2 {
+    font-size: 1.8rem;
 }
 
 .dash {
@@ -54,6 +49,21 @@ nav div {
 
 .options {
     grid-template-columns: 1fr;
+    gap: 25px;
+}
+
+.sidebar {
+    height: 60%;
+    display: grid;
+    grid-template-rows: 1fr 6fr 3fr;
+    grid-template-columns: 1fr;
+}
+
+nav div {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    gap: 15px;
+    align-items: start;
 }
 
 .options div {
