Fix margins on nav elements

--- a/styles.css
+++ b/styles.css
@@ -44,12 +44,14 @@ h2 {
 }
 
 .dash {
-    margin: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .options {
     grid-template-columns: 1fr;
     gap: 25px;
+    margin-bottom: 20px;
 }
 
 .sidebar {
@@ -57,6 +59,7 @@ h2 {
     display: grid;
     grid-template-rows: 1fr 6fr 3fr;
     grid-template-columns: 1fr;
+    gap: 60px;
 }
 
 nav div {
