--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,9 @@ body {
 }
 
 header {
+    display: grid;
     background-color: rgb(255, 255, 255);
+    grid-template-rows: 1fr 1fr;
 }
 
 nav {
@@ -62,11 +64,19 @@ h2 {
     gap: 60px;
 }
 
+.content {
+    background-color: rgb(228, 228, 228);
+}
+
 nav div {
     display: grid;
     grid-template-columns: 1fr 5fr;
     gap: 15px;
     align-items: start;
+}
+
+nav img {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(76deg) brightness(104%) contrast(102%);
 }
 
 .options div {
@@ -75,11 +85,6 @@ nav div {
     align-items: center;
 }
 
-nav img {
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(76deg) brightness(104%) contrast(102%);
-}
 
 
-.content {
-    background-color: rgb(228, 228, 228);
-}
+
