--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header {
     display: grid;
     background-color: rgb(255, 255, 255);
     grid-template-rows: 1fr 1fr;
-    align-items: center;
+    margin: 0px 20px;
 }
 
 nav {
@@ -82,16 +82,25 @@ img {
 .top-right {
     display: grid;
     grid-auto-flow: column;
+    grid-template-columns: 1fr 1fr 4fr;
 }
 
 .search {
     display: grid;
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 1fr 25fr;
 }
 
 .search-bar {
     background-color: rgb(228, 228, 228);
-    border-radius: 10px;
+    border-radius: 20px;
+}
+
+.mid {
+    grid-row: 2;
+}
+
+.all {
+    grid-row: 1 / -1;
 }
 
 nav div {
@@ -111,5 +120,9 @@ nav img {
     align-items: center;
 }
 
+.top-bar > div {
+    grid-template-rows: 1fr 2fr 1fr;
+    gap: 0 20px;
+}
 
 
