--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,12 @@ img {
     gap: 0 20px;
 }
 
+.action {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+}
+
 nav div {
     display: grid;
     grid-template-columns: 1fr 5fr;
