--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     height: 100vh;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
+    background-color: var(--tertiary-color);
 }
 
 header {
@@ -88,7 +89,13 @@ button {
 }
 
 .content {
+    padding: 30px 10px 5px 20px;
     background-color: var(--tertiary-color);
+    height: 90%;
+
+    display: inline-grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
 }
 
 .top-bar {
@@ -151,6 +158,17 @@ button {
     box-shadow: 4px 4px 6px -2px rgb(187, 187, 187);
 }
 
+.display {
+    display: grid;
+    gap: 10px;
+    grid-template-rows: 1.7rem 1fr;
+}
+
+.right-nav {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
 nav div {
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -184,4 +202,9 @@ nav img {
 
 .greeting img {
     align-self: end;
+}
+
+.display > div {
+    height: 100%;
+    background-color: rgb(111, 188, 255);
 }
