--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ button {
 
 .display {
     display: grid;
-    gap: 10px;
+    gap: 20px;
     grid-template-rows: 1.7rem 1fr;
 }
 
@@ -179,6 +179,8 @@ button {
 
 .project {
     background-color: var(--primary-color);
+    border-radius: 10px;
+    border-left: 10px solid rgb(202, 202, 39);
 }
 
 nav div {
