--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,8 @@ button {
     background-color: var(--primary-color);
     border-radius: 10px;
     border-left: 10px solid rgb(202, 202, 39);
+    padding: 20px 0px 10px 10px;
+    color: rgb(145, 145, 145)
 }
 
 nav div {
@@ -216,4 +218,9 @@ nav img {
 
 .greeting img {
     align-self: end;
+}
+
+.project h3 {
+    margin-bottom: 5px;
+    color: black;
 }
