--- a/styles.css
+++ b/styles.css
@@ -181,8 +181,19 @@ button {
     background-color: var(--primary-color);
     border-radius: 10px;
     border-left: 10px solid rgb(202, 202, 39);
-    padding: 20px 0px 10px 10px;
-    color: rgb(145, 145, 145)
+    padding: 20px 0px 20px 20px;
+    color: rgb(145, 145, 145);
+
+    display: grid;
+    grid-template-rows: 1fr 32px;
+}
+
+.icons {
+    display: grid;
+    grid-template-columns: 32px 32px 32px;
+    gap: 20px;
+    justify-content: end;
+    margin-right: 30px;
 }
 
 nav div {
