--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ button {
 }
 
 .content {
-    padding: 30px 10px 5px 20px;
+    padding: 30px 30px 5px 20px;
     background-color: var(--tertiary-color);
     height: 90%;
 
@@ -194,6 +194,11 @@ button {
     gap: 20px;
     justify-content: end;
     margin-right: 30px;
+}
+
+.announcments, .trending {
+    background-color: var(--primary-color);
+    border-radius: 10px;
 }
 
 nav div {
