--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,13 @@ button {
 .announcments, .trending {
     background-color: var(--primary-color);
     border-radius: 10px;
+    padding: 0 30px;
 }
+
+.announcments {
+    padding-top: 40px;
+}    
+
 
 nav div {
     display: grid;
