Add basic layour for trending

--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,17 @@ button {
     grid-template-rows: 70px 10px 70px 10px 70px;
 }    
 
+.trending {
+    padding: 10px 30px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.trend {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    gap: 20px;
+}
 
 nav div {
     display: grid;
